# notify-sound

./: Cargo.toml  README.md  flake.nix
src/: args.rs  config.rs  error.rs  listener.rs  main.rs  notification.rs
